--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.8",
+    "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3"
   },
